syntax = "proto3";

package calculator;

option go_package = "grpcLearning/calculator/proto";

message SumRequest {
    int32 firstNumber = 1;
    int32 secondNumber = 2;
}

message SumResponse {
    int32 sum = 1;
}